--- a/bin/install
+++ b/bin/install
@@ -31,6 +31,11 @@ install_rust() {
     fail "asdf-rust supports release installs only"
   fi
 
+  local install_extra_flags=''
+  if [ -n "${ASDF_RUST_IGNORE_COMPONENTS}" ]; then
+    install_extra_flags="--without=${ASDF_RUST_IGNORE_COMPONENTS} $install_extra_flags"
+  fi
+
   local platform
 
   case "$OSTYPE" in
@@ -67,7 +72,7 @@ install_rust() {
 
     echo "∗ Installing..."
     cd "$distination_path"
-    ./install.sh --prefix="$install_path" || fail "Could not install"
+    ./install.sh --prefix="$install_path" $install_extra_flags || fail "Could not install"
 
     rm -rf "$tmp_download_dir"
 
